# ownvoice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
npm/: package.json
ownvoice/: __init__.py  cli.py  data.py  infer.py  score.py  train.py
tests/: conftest.py  test_cli.py  test_data.py  test_infer.py  test_score.py  test_train.py
